add_subdirectory_if_exist(app_init)
if(CONFIG_QAPP_UNIRTOS_STD_FUNC)
    add_subdirectory_if_exist(unirtos_std)
endif()
add_subdirectory_if_exist(apps)

collect_qos_application_projects(${CMAKE_CURRENT_SOURCE_DIR} external_qos_application_dirs)
foreach(external_qos_application_dir ${external_qos_application_dirs})
    message(STATUS "Auto-discovered external application: ${external_qos_application_dir}")
    add_subdirectory(${external_qos_application_dir})
endforeach()

# Support absolute-path external app injection from SDK root CMake.
if(DEFINED EXTERNAL_QOS_APPLICATION_DIRS)
    foreach(external_qos_application_abs ${EXTERNAL_QOS_APPLICATION_DIRS})
        if(IS_ABSOLUTE ${external_qos_application_abs} AND EXISTS ${external_qos_application_abs}/CMakeLists.txt)
            get_filename_component(external_name ${external_qos_application_abs} NAME)
            set(external_bin_dir ${CMAKE_BINARY_DIR}/external_apps/${external_name})
            message(STATUS "Auto-discovered external application (absolute): ${external_qos_application_abs}")
            add_subdirectory(${external_qos_application_abs} ${external_bin_dir})
        endif()
    endforeach()
endif()
